Fixed overlapping answer button

--- a/e_metrobus/static/sass/_question.scss
+++ b/e_metrobus/static/sass/_question.scss
@@ -68,8 +68,9 @@
 
     &--more {
       font-weight: 300;
+      margin-bottom: 5rem;
       img {
-        margin: 2rem 0; 
+        margin: 2rem 0;
       }
     }
   }
